# robot-sim

./: .gitignore  Cargo.toml  README.md  potentiometer.ino
.cargo/: config.toml
bluster/: Cargo.toml
bluster/src/: gizmo.rs  main.rs  node.rs
bluster/src/assets/: shoulder.mtl  upper_arm.mtl  wrist.mtl
k3d/: Cargo.toml
k3d/src/: main.rs
macro/: Cargo.toml
macro/src/: main.rs
potentiometer.ino/: potentiometer.ino.ino
robotsim/: Cargo.toml
robotsim/src/: main.rs  robot_model.rs
src/: gizmo.rs  glove-example.rs  lib.rs  main.rs  motion.rs  node.rs  robot.rs  scene.rs  vrglove.rs
src/assets/: gizmo.fbx  gizmo.mtl  main_arm.mtl
src/nodes/traits/: node.rs
src/scene/: grid.rs  node.rs  stats.rs
src/vrglove/: arm.rs  encoder.rs  finger.rs
