[package]
name = "bluster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "glove"
path = "src/bin/glove-example.rs"

[[bin]]
name = "bluster"
path = "src/bin/bluster.rs"

[dependencies]
kiss3d = "0.34.0"
nalgebra = "0.30.1"
ncollide3d = "0.33.0"
serialport = "4.1.0"